[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/enemy.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Boss.gd" type="Script" id=2]
[ext_resource path="res://assets/sfx/enemy_death.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sfx/boss_hit.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 43, 35 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 44, 10 )

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 0.972549, 0.176471, 0.0196078, 1, 0.882353, 0.74902, 0.0392157, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 39.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.5
scale_random = 0.5
color_ramp = SubResource( 4 )

[sub_resource type="Animation" id=6]
resource_name = "Death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3.5, 3.5 ), Vector2( 0.1, 0.1 ) ]
}

[node name="Boss" type="KinematicBody2D" groups=[
"Boss",
]]
show_behind_parent = true
scale = Vector2( 3.5, 3.5 )
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="Boss" type="Sprite" parent="."]
position = Vector2( 0, -48 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -36.4704 )
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
position = Vector2( 0, -16.5 )
scale = Vector2( 1, 1.55 )
rect = Rect2( -50, -50, 100, 60 )
process_parent = true
physics_process_parent = true

[node name="StompDetector" type="Area2D" parent="."]
visible = false
modulate = Color( 0.0352941, 0.262745, 0.952941, 1 )
position = Vector2( 0, -71 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
position = Vector2( 0, -10 )
shape = SubResource( 2 )

[node name="EnemyDeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "Effects"

[node name="Particles2D" type="Particles2D" parent="."]
visible = false
position = Vector2( 0, -44 )
emitting = false
amount = 5000
lifetime = 2.0
one_shot = true
speed_scale = 1.2
explosiveness = 0.8
process_material = SubResource( 5 )

[node name="DeathAnimation" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 6 )

[node name="BossHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "Effects"

[node name="BossTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 4.0
one_shot = true

[node name="HitTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
one_shot = true
[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]
[connection signal="timeout" from="BossTimer" to="." method="_on_BossTimer_timeout"]
